Add Offers & Flight Schedules

--- a/src/app/admin/hotel/hotel.component.html
+++ b/src/app/admin/hotel/hotel.component.html
@@ -8,6 +8,10 @@
       </button>
     </div>
     <div class="card border border-0 shadow p-4 table-responsive">
+      @if (isFetching()) {
+      <app-loading />
+      }
+      @else {
       <table class="table text-center table-hover table-striped">
         <thead>
           <tr>
@@ -32,9 +36,16 @@
               </button>
             </td>
           </tr>
+          }@empty {
+          <tr>
+            <th colspan="4">
+              <app-empty />
+            </th>
+          </tr>
           }
         </tbody>
       </table>
+      }
 
     </div>
   </div>
