--- a/src/app/admin/shared/welcome/welcome.component.html
+++ b/src/app/admin/shared/welcome/welcome.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Welcome <span>{{ admin().name }}</span></h2>
     <div class="row">
-      <img src="./assets/img/undraw_hello_ccwj.svg" class="w-100 d-block m-auto" alt="Welcome Image">
+      <img src="./assets/img/undraw_hello_ccwj.svg" class="img-fluid d-block m-auto" alt="Welcome Image">
     </div>
   </div>
 </section>
