--- a/src/app/admin/hotel/hotel.component.html
+++ b/src/app/admin/hotel/hotel.component.html
@@ -144,7 +144,7 @@
                 <input type="file" id="image" (change)="onFileSelected($event)" class="form-control"
                   [ngClass]="{'is-invalid': addHotelForm.controls.image_cover.touched && addHotelForm.controls.image_cover.invalid}">
                 <div *ngIf="HotelImage()" class="image_cover-container mt-2">
-                  <img src="http://localhost:8000{{ HotelImage() }}" alt="Hotel Image Cover" width="100" height="100"
+                  <img src="http://192.168.1.4:8000{{ HotelImage() }}" alt="Hotel Image Cover" width="100" height="100"
                     [ngClass]="{'image_cover-warning': showImageWarning()}">
                   <span class="text-danger px-2 fs-6">** Choice Same Image Or Replaced It</span>
                 </div>
