--- a/src/app/admin/offer/offer.component.html
+++ b/src/app/admin/offer/offer.component.html
@@ -17,7 +17,7 @@
           <tr>
             <th>#</th>
             <th>Title</th>
-            <th colspan="2">Actions</th>
+            <th colspan="3">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -28,6 +28,11 @@
             <td>
               <button class="btn text-danger fs-5" title="delete" (click)="deleteOffer(item.id)"><i
                   class="fa-solid fa-trash"></i></button>
+            </td>
+            <td>
+              <button class="btn text-secondary fs-5" title="show" routerLink="/dashboard/offer-details/{{ item.id }}">
+                <i class="fa-solid fa-eye"></i>
+              </button>
             </td>
             <td>
               <button class="btn text-warning fs-5" title="edit" data-bs-toggle="modal" data-bs-target="#offerModal"
@@ -117,7 +122,7 @@
                 <input type="file" id="image" (change)="onFileSelected($event)" class="form-control"
                   [ngClass]="{'is-invalid': addOfferForm.controls.image_cover.touched && addOfferForm.controls.image_cover.invalid}">
                 <div *ngIf="OfferImage()" class="image_cover-container mt-2">
-                  <img src="http://localhost:8000{{ OfferImage() }}" alt="Offer Image Cover" width="100" height="100"
+                  <img src="http://192.168.1.4:8000{{ OfferImage() }}" alt="Offer Image Cover" width="100" height="100"
                     [ngClass]="{'image_cover-warning': showImageWarning()}">
                   <span class="text-danger px-2 fs-6">** Choice Same Image Or Replaced It</span>
                 </div>
