--- a/src/app/admin/popular-place/popular-place.component.html
+++ b/src/app/admin/popular-place/popular-place.component.html
@@ -114,7 +114,7 @@
                 <input type="file" id="image" (change)="onFileSelected($event)" class="form-control"
                   [ngClass]="{'is-invalid': addPopularPlaceForm.controls.image_cover.touched && addPopularPlaceForm.controls.image_cover.invalid}">
                 <div *ngIf="PopularPlaceImage()" class="image_cover-container mt-2">
-                  <img src="http://localhost:8000{{ PopularPlaceImage() }}" alt="PopularPlace Image Cover" width="100"
+                  <img src="http://192.168.1.4:8000{{ PopularPlaceImage() }}" alt="PopularPlace Image Cover" width="100"
                     height="100" [ngClass]="{'image_cover-warning': showImageWarning()}">
                   <span class="text-danger px-2 fs-6">** Choice Same Image Or Replaced It</span>
                 </div>
